Fixed header and top-section font and spacing issues

--- a/css/main.css
+++ b/css/main.css
@@ -133,7 +133,7 @@ figure {
 
 /**HEADER**/
 
-header{
+header {
     font-family:'Inconsolata', monospace;
     background-color:#ff8f1a;  
     background-size: cover;
@@ -142,7 +142,7 @@ header{
     align-items: center;
 }
 
-header .content-wrapper{
+header .content-wrapper {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -150,14 +150,14 @@ header .content-wrapper{
     flex-direction: column;
 }
 
-.heading{
+.heading {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 .heading h1 {
-    padding: 10px 10px 0 10px;
+    padding: 10px 0 0 0;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -558,6 +558,17 @@ header nav {
     width: 60%;
 }
 
+.top-section h2 {
+    font-size: 60px;  
+    margin-bottom: 130px;
+}
+
+.top-section h3 {
+    font-size: 40px;
+    padding-top: 30px;
+    padding-bottom: 15px;
+}
+
 .top-section h3 br {
   content:' ';
 }
@@ -600,7 +611,7 @@ h1, h2, h3, h4, h5, p, a {
 }
 
 .heading .mobile-break {
-    display: none;
+    display: inline;
 }
 
 header .content-wrapper {
